# bank-payment-service

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
curls/: bank.http
migrations/: 20230131080830_init.down.sql  20230131080830_init.up.sql
src/: bank.rs  bank_web.rs  errors.rs  main.rs
src/bank/: accounts.rs  payment_instruments.rs  payments.rs  refunds.rs
src/bank_web/: payments.rs  refunds.rs
